[project]
name = "my_python_utils"
version = "0.1.0"
description = "自作のpythonユーティリティライブラリ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "ulid>=1.1",
]

[tool.uv]
dev-dependencies = [
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-rtd-theme>=3.0.2",
]
